# CMakeList.txt : CMake project for modal_state_bl, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (modal_state_bl "modal_state_bl.cpp" "modal_state_bl.h")

# TODO: Add tests and install targets if needed.
